02. usefull-things-303-book. UI. Book.

--- a/index.html
+++ b/index.html
@@ -1,18 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./assets/css/style.css" />
+        <title>Project</title>
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Project</title>
-</head>
+    <body>
+        <div class="center">
+            <div class="page">
+                <h1>Our Story</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo nam quod vero molestias maxime
+                    cupiditate possimus maiores, consequuntur enim suscipit totam. Perferendis eum aut facere nesciunt
+                    ullam rem magnam perspiciatis dolor ducimus voluptates fuga minus tempora aliquid maxime iure
+                    doloribus earum, vel iste reprehenderit officiis laboriosam dolores nulla? Nesciunt quo velit quis
+                    quae repudiandae reprehende quos maxime quisquam nobis est molestias. Voluptatum, ipsam em?
+                    Deleniti, ex molestiae perspiciatis consequuntur, assumenda, consectetur eligendi vitae dicta
+                    placeat ipsa laboriosam delectus. Quasi harum voluptatum ad, rem iste dignissimos cumque esse,
+                    doloremque vero ratione, dolor consequatur eius aliquam vel nisi quo placeat sequi. Tenetur quaerat
+                    ut quos reiciendis debitis vitae dolorem, perspiciatis tempore quae.
+                </p>
 
-<body>
-    start
+                <br />
 
-    <script src="./assets/js/main.js"></script>
-</body>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus impedit voluptates sapiente unde
+                    labore cum eos, praesentium ea ipsa quis dolor illo asperiores beatae repudiandae omnis, voluptatem
+                    odio totam, dignissimos alias quam hic iure dolores? Dicta totam repellat iusto optio repudiandae,
+                    perspiciatis atendis offic commodi. Libero dolorum distinctio eius quasi, est excepturi veritatis
+                    suscipit nostrum reprehenderit deleniti voluptas in atque maiores totam placeat, dolore velit, at
+                    dolorem tempora alias sapiente enim consequatur nihil. Debitis, ad quo doloremque suscipit inventore
+                    ducimus eligendi corrupti.
+                </p>
+            </div>
+        </div>
 
+        <script src="./assets/js/main.js"></script>
+    </body>
 </html>
